...
  icon: Icons.trending_down_outlined,
  section: 'blood_pressure',
  order: 3,
);

const dateFormatStringOptions = [
  'yyyy-MM-dd HH:mm',
  'dd-MM-yyyy HH:mm',
  'dd/MM/yyyy HH:mm',
  'MM/dd/yyyy HH:mm',
  'dd.MM.yyyy HH:mm',
  'yyyy/MM/dd HH:mm',
  'MMM d, yyyy HH:mm',
...
